# rclibc

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/: _ctype.h  _fcntl.h  _locale.h  _stdint.h  _stdio.h  _stdlib.h  _time.h  _unistd.h  assert.h  ctype.h  errno.h  float.h  limits.h  locale.h  math.h  setjmp.h  signal.h  stdarg.h  stddef.h  stdio.h  stdlib.h  string.h  time.h
include/sys/: _resource.h  _stat.h  _time.h  cdefs.h
libc/: CMakeLists.txt
libc/assert/: _wassert.c
libc/ctype/: CMakeLists.txt  _plmap.c  _ptype.c  _pumap.c  isalnum.c  isalpha.c  iscntrl.c  isdigit.c  isgraph.c  islower.c  isprint.c  ispunct.c  isspace.c  isupper.c  isxdigit.c  tolower.c  toupper.c
libc/errno/: CMakeLists.txt  errno.c
libc/include/: assert.h  ctype.h  errno.h  float.h  internal.h  limits.h  locale.h  math.h  setjmp.h  signal.h  stdarg.h  stddef.h  stdio.h  stdlib.h  string.h  syscall.h  time.h
libc/internal/: CMakeLists.txt  _allocbuf.c  _allocfile.c  _clmap.c  _ctype.c  _cumap.c  _fclose.c  _fopen.c  _freebuf.c  _freefile.c  _iob.c  _piob.c  _plmap.c  _ptype.c  _pumap.c  _rseed.c  _tmpnam.c  _wassert.c
libc/locale/: _getlocaleinfo.c  localeconv.c  setlocale.c
libc/stdio/: CMakeLists.txt  _allocbuf.c  _allocfile.c  _fclose.c  _fflush.c  _finit.c  _fopen.c  _freebuf.c  _freefile.c  _piob.c  _stderr.c  _stdin.c  _stdout.c  _tmpdir.c  _tmpnam.c  _ultoa.c  clearerr.c  fclose.c  feof.c  ferror.c  fflush.c  fgetc.c  fgets.c  fopen.c  fprintf.c  fputc.c  fputs.c  fread.c  freopen.c  fwrite.c  getc.c  getchar.c  gets.c  perror.c  printf.c  putc.c  putchar.c  puts.c  remove.c  rename.c  (+12 more)
libc/stdlib/: CMakeLists.txt  _prand.c  _rand.c  _rseed.c  _ultoa.c  abort.c  abs.c  atof.c  atoi.c  atol.c  div.c  labs.c  ldiv.c  rand.c  srand.c
libc/string/: CMakeLists.txt  memchr.c  memcmp.c  memcpy.c  memmove.c  memset.c  strcat.c  strchr.c  strcmp.c  strcpy.c  strcspn.c  strerror.c  strlen.c  strncat.c  strncmp.c  strncpy.c  strpbrk.c  strrchr.c  strspn.c  strstr.c  strtok.c
libc/sysdeps/unix/: _exit.S  _exit.c  _tmpdir.c  access.S  access.c  close.S  close.c  getpid.S  getpid.c  getrusage.S  gettimeofday.S  open.S  open.c  read.S  read.c  rename.S  rename.c  rmdir.S  rmdir.c  stat.S  syscall.h  sysdep.h  unlink.S  unlink.c  write.S  write.c
libc/sysdeps/unix/darwin/: syscall.h  sysdep.h
libc/sysdeps/unix/darwin/x86_64/: sysdep.h
libc/sysdeps/unix/linux/: sysdep.h
libc/sysdeps/unix/linux/x86_64/: syscall.h  sysdep.h
libc/sysdeps/win32/: getpid.c  rename.c  unlink.c  windows.h
libc/time/: _daystomonth.c  _gmtime.c  _tmbuf.c  asctime.c  clock.c  ctime.c  difftime.c  gmtime.c  mktime.c  time.c
linux/: _exit.S  access.S  close.S  getpid.S  move.S  open.S  read.S  unlink.S  write.S
test/: tassert.c  tctype.c  terrno.c  tfloat.c  tlimits.c  tstdarg.c  tstddef.c
win32/: CMakeLists.txt  getpid.c  move.c  unlink.c  windows.h
